--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
   <body>
     <header>
+      <% if user_signed_in? %>
+        <%= link_to "アカウント編集", edit_user_registration_path %>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% else %>
+        <%= link_to 'ログイン', user_session_path %>
+        <%= link_to '新規登録', new_user_registration_path %>
+      <% end %>
     </header>
     <main>
       <div class="base-container <%= max_width %>">
@@ -18,12 +25,5 @@
     </main>
     <footer>
     </footer>
-    <% if user_signed_in? %>
-      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% else %>
-      <%= link_to 'ログイン', user_session_path %>
-      <%= link_to '新規登録', new_user_registration_path %>
-    <% end %>
-    <%= yield %>
   </body>
 </html>
