--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 .base-container {
-  margin: 0 auto;
-  padding: 1rem;
+  @extend .container-fluid;
+  max-width: var(--breakpoint-lg);
+  padding: 30px 15px;
 }
 
 /* max-width */
@@ -15,6 +16,10 @@
 
 .mw-xl {
   max-width: 1200px;
+}
+
+body {
+  padding-top: 56px;
 }
 /*
  *= require_tree .
