--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,3 +1,3 @@
 <h1>top page</h1>
 
-<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-primary btn-block">Primary</button>
