ボタンをBootstrapのbtn-blockを適用

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit t('.update') %>
+    <%= f.submit t('.update'), class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
 
