--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= render "layouts/header" %>
     </header>
     <main>
-      <div class="base-container <%= max_width %>">
+      <div class="base-container">
         <%= yield %>
       </div>
     </main>
