--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
   <div class="field">
@@ -13,17 +13,20 @@
     <% if @minimum_password_length %>
     <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: 'form-control'  %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'  %>
   </div>
 
-  <div class="actions">
+  <div class="actions mt-4">
     <%= f.submit t('.sign_up'), class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<hr class="devise-link my-5">
+<div class="form-group">
+  <%= link_to "アカウントをお持ちの方", new_session_path(resource_name), class: 'btn btn-info btn-block mt-4' %><br />
+</div>
