--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,14 +3,18 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="field my-4">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
   <div class="actions">
-    <%= f.submit t('.send_me_reset_password_instructions') %>
+    <%= f.submit t('.send_me_reset_password_instructions'), class: "btn btn-primary btn-block"  %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<hr class="devise-link my-5">
+<div class="form-group">
+  <%= link_to "アカウントをお持ちの方", new_session_path(resource_name), class: 'btn btn-info btn-block mt-4' %><br />
+  <%= link_to "アカウントをお持ちでない方", new_registration_path(resource_name), class: 'btn btn-info btn-block mb-4' %><br />
+</div>
