--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
+      <%# Ruby %>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Ruby
@@ -17,6 +18,49 @@
           <a class="dropdown-item" href="#">チャレンジ問題集</a>
         </div>
       </li>
+      <%# PHP %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          PHP
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">PHPテキスト教材</a>
+          <a class="dropdown-item" href="#">PHP動画教材</a>
+        </div>
+      </li>
+      <%# デザイン講座 %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          デザイン講座
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">デザインツールの使い方</a>
+          <a class="dropdown-item" href="#">実案件の取り方</a>
+          <a class="dropdown-item" href="#">デザインのマーケティング戦略</a>
+        </div>
+      </li>
+      <%# 勉強会 %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          勉強会
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">全ての勉強会</a>
+          <a class="dropdown-item" href="#">プログラミング勉強会</a>
+        </div>
+      </li>
+      <%# マネタイズ講座 %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          マネタイズ講座
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">マーケティング講座</a>
+          <a class="dropdown-item" href="#">Lステップ講座</a>
+          <a class="dropdown-item" href="#">インスタ講座</a>
+        </div>
+      </li>
+      <%= link_to "LINE", "#", class: "nav-item nav-link active" %>
       <% if user_signed_in? %>
         <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-item nav-link active" %>
         <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: "nav-item nav-link active" %>
