--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top header-nav">
-  <%= link_to "やんばるエキスパート", root_path, class: "navbar-brand" %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#">やんばるエキスパート</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
+    <ul class="navbar-nav " >
       <%# Ruby %>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,14 +60,26 @@
           <a class="dropdown-item" href="#">インスタ講座</a>
         </div>
       </li>
-      <%= link_to "LINE", "#", class: "nav-item nav-link active" %>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">LINE</a>
+      </li>
       <% if user_signed_in? %>
-        <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-item nav-link active" %>
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: "nav-item nav-link active" %>
+        <!-- ログイン時 -->
+        <li class="nav-item active">
+          <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-item nav-link active"%>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "ログアウト", destroy_user_session_path, class: "nav-item nav-link active", method: :delete, data: { confirm: "Are you sure?" } %>
+        </li>
       <% else %>
-        <%= link_to 'ログイン', user_session_path, class: "nav-item nav-link active" %>
-        <%= link_to '新規登録', new_user_registration_path, class: "nav-item nav-link active" %>
+        <!-- 非ログイン時 -->
+        <li class="nav-item active">
+          <%= link_to "ログイン", new_user_session_path, class: "nav-item nav-link active" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "新規登録", new_user_registration_path, class: "nav-item nav-link active" %>
+        </li>
       <% end %>
-    </div>
+    </ul>
   </div>
 </nav>
