--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,14 @@
  */
 
 @import 'bootstrap/scss/bootstrap';
+.navbar-nav {
+  font-size: 15px;
+}
+
+.navbar {
+  margin: 0 auto;
+}
+
+body {
+  padding-top: 60px;
+}
