--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -69,7 +69,7 @@
           <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-item nav-link active"%>
         </li>
         <li class="nav-item active">
-          <%= link_to "ログアウト", destroy_user_session_path, class: "nav-item nav-link active", method: :delete, data: { confirm: "Are you sure?" } %>
+          <%= link_to "ログアウト", destroy_user_session_path, class: "nav-item nav-link active", method: :delete, data: { confirm: "本当によろしいですか" } %>
         </li>
       <% else %>
         <!-- 非ログイン時 -->
