--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <header>
     </header>
     <main>
+      <%= render "layouts/flash" %>
       <div class="base-container <%= max_width %>">
         <%= yield %>
       </div>
