--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,23 +63,24 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">LINE</a>
       </li>
-      <% if user_signed_in? %>
-        <!-- ログイン時 -->
-        <li class="nav-item active">
-          <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-item nav-link active"%>
-        </li>
-        <li class="nav-item active">
-          <%= link_to "ログアウト", destroy_user_session_path, class: "nav-item nav-link active", method: :delete, data: { confirm: "本当によろしいですか" } %>
-        </li>
-      <% else %>
-        <!-- 非ログイン時 -->
-        <li class="nav-item active">
-          <%= link_to "ログイン", new_user_session_path, class: "nav-item nav-link active" %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to "新規登録", new_user_registration_path, class: "nav-item nav-link active" %>
-        </li>
-      <% end %>
+      <!-- マイページ -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-item nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          マイページ
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">進捗管理</a>
+          <% if user_signed_in? %>
+          <!-- ログイン時 -->
+            <%= link_to "アカウント編集", edit_user_registration_path, class: "dropdown-item"%>
+            <%= link_to "ログアウト", destroy_user_session_path, class: "dropdown-item", method: :delete, data: { confirm: "本当によろしいですか" } %>
+          <% else %>
+          <!-- 非ログイン時 -->
+          <%= link_to "ログイン", new_user_session_path, class: "dropdown-item" %>
+          <%= link_to "新規登録", new_user_registration_path, class: "dropdown-item" %>
+          <% end %>
+        </div>
+      </li>
     </ul>
   </div>
 </nav>
