ナビバーのリンク作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Ruby/Railsテキスト教材</a>
-          <a class="dropdown-item" href="#">Ruby/Rails動画教材</a>
+          <a class="dropdown-item" href="/movies">Ruby/Rails動画教材</a>
           <a class="dropdown-item" href="#">AWSテキスト教材</a>
           <a class="dropdown-item" href="#">よくある質問集</a>
           <a class="dropdown-item" href="#">チャレンジ問題集</a>
