ナビバーにやんばるエキスパートのロゴ挿入

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="#">
-      <img width="240" src="/assets/yanbaru_logo-82873a179717b956922e2b075eaf01c24deadc0c50b2028003ebcd81b29e3d8e.png">
+      <img width="240" src="https://d5izmuz0mcjzz.cloudfront.net/yanbaru_expert_logo.png">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
