indexファイル修正（閉じタグ追加）

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,6 +8,7 @@
             <div class="card-body">
               <p class="card-text">Lv.<%= id %>:<%= movie.title %></p>
             </div>
+          </div>
         </div>
       <% end %>
     </div>    
