--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,9 +7,10 @@
             <iframe height="50%" src=<%= movie.url %> frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="card-body">
               <p class="card-text">Lv.<%= id %>:<%= movie.title %></p>
+              <a class="btn btn-primary btn-block">視聴済みを解除</a>
             </div>
           </div>
         </div>
       <% end %>
-    </div>    
+    </div>
   </div>
