--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -3,7 +3,8 @@
   <div class = "row">
     <% @texts.each do |text| %>
       <div class= "col-12 col-md-6 col-lg-4">
-        <div class="card border-dark" >
+        <div class="card content-card border-dark" >
+          <img class="card-img-top" src="https://d5izmuz0mcjzz.cloudfront.net/texts/no_image.jpg">
           <div class="card-body">
             <p class="card-text"><%= text.title %></p>
           </div>
