非同期処理の実装

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,12 +7,12 @@
             <iframe height="50%" src=<%= movie.url %> frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="card-body">
               <p class="card-text">Lv.<%= id %>:<%= movie.title %></p>
+              <p id="movie-<%= movie.id %>">
               <% if movie.liked_by?(current_user) %>
                 <%= render "like", movie: id %>
               <% else %>
                 <%= render "dislike", movie: id %>
               <% end %>
-              <a class="btn btn-primary btn-block">視聴済みを解除</a>
             </div>
           </div>
         </div>
