--- a/app/views/movies/_dislike.html.erb
+++ b/app/views/movies/_dislike.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "視聴済みにする", movie_likes_path(movie), method: :post, remote: true, class: "btn btn-primary btn-block" %>
+<%= link_to "視聴済みにする", movie_likes_path(movie), method: :post, remote: true, class: "btn btn-secondary btn-block" %>
