--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -9,9 +9,9 @@
               <p class="card-text">Lv.<%= id %>:<%= movie.title %></p>
               <p id="movie-<%= movie.id %>">
               <% if movie.liked_by?(current_user) %>
-                <%= render "like", movie: id %>
+                <%= render "like", movie: movie.id %>
               <% else %>
-                <%= render "dislike", movie: id %>
+                <%= render "dislike", movie: movie.id %>
               <% end %>
             </div>
           </div>
