--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,16 +1,19 @@
 <h2 class = "text-center">Ruby/Rails テキスト教材</h2>
+
   <div class = "row">
     <% @texts.each do |text| %>
       <div class= "col-12 col-md-6 col-lg-4 text-card">
-        <div class="card card-contens border-dark" >
-          <div class = "card-header ">
-            <img class="card-img-top" src="https://d5izmuz0mcjzz.cloudfront.net/texts/no_image.jpg">
+        <%= link_to "/texts/#{text.id}" do %>
+          <div class="card card-contens border-dark" >
+            <div class = "card-header ">
+              <img class="card-img-top" src="https://d5izmuz0mcjzz.cloudfront.net/texts/no_image.jpg">
+            </div>
+            <div class="card-body">
+              <p class="card-text"><%= text.title %></p>
+              <p>【<%= text.genre %>】</p>
+            </div>
           </div>
-          <div class="card-body">
-            <p class="card-text"><%= text.title %></p>
-            <p>【<%= text.genre %>】</p>
-          </div>
-        </div>
+        <% end %>
       </div>
     <% end %>
   </div>
