--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,6 @@
-<h1>フッター</h1>
+<footer class = "footer bg-primary">
+  <a href="#" class="text-white">LINE</a>
+  <a href="#" class="text-white">Twitter</a>
+  <a href="#" class="text-white">YouTube</a>
+  <a href="#" class="text-white">Facebook</a>
+</footer>
