--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class = "footer bg-primary">
+<footer class = "bg-primary">
   <a href="#" class="text-white">LINE</a>
   <a href="#" class="text-white">Twitter</a>
   <a href="#" class="text-white">YouTube</a>
