--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,22 @@ p.card-text {
 .alert-alert {
   @extend .alert-danger;
 }
+
+// footer
+footer {
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer a {
+  padding: 0 20px;
+  font-size: 20px;
+}
+
+.text-white {
+  color: #fff !important;
+}
