--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,6 @@
 body {
   padding-top: 56px;
 }
-
 /*
  *= require_tree .
  *= require_self
@@ -67,6 +66,7 @@ p.card-text {
 
 // footer
 footer {
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 50px;
@@ -82,4 +82,11 @@ footer a {
 
 .text-white {
   color: #fff !important;
+}
+
+.footerFixed {
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 50px;
+  box-sizing: border-box;
 }
