--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header>
+    <div class="footerFixed">
+      <header>
       <%= render "layouts/header" %>
     </header>
     <main>
@@ -21,5 +22,7 @@
     <footer>
       <%= render "layouts/footer" %>
     </footer>
+    </div>
+
   </body>
 </html>
