--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,10 +35,6 @@ body {
   margin: 0 auto;
 }
 
-body {
-  padding-top: 56px;
-}
-
 // 教材一覧カード
 div.card-contents {
   height: 300px;
@@ -68,11 +64,12 @@ p.card-text {
 footer {
   position: absolute;
   bottom: 0;
+
   width: 100%;
-  height: 50px;
-  display: flex;
+  height: 60px;
   justify-content: center;
   align-items: center;
+  display: flex;
 }
 
 footer a {
@@ -85,8 +82,7 @@ footer a {
 }
 
 .footerFixed {
-  min-height: 100vh;
-  position: relative;
-  padding-bottom: 50px;
+  position: relative; /* ←相対位置 */
+  padding-bottom: 70px; /* ←フッターの高さを指定 */
   box-sizing: border-box;
 }
