--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,13 @@
 
 body {
   padding-top: 56px;
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
 }
 /*
  *= require_tree .
@@ -62,9 +69,6 @@ p.card-text {
 
 // footer
 footer {
-  position: absolute;
-  bottom: 0;
-
   width: 100%;
   height: 60px;
   justify-content: center;
@@ -79,10 +83,4 @@ footer a {
 
 .text-white {
   color: #fff !important;
-}
-
-.footerFixed {
-  position: relative; /* ←相対位置 */
-  padding-bottom: 70px; /* ←フッターの高さを指定 */
-  box-sizing: border-box;
 }
