--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,7 +1,7 @@
 <h2 class = "text-center">Ruby/Rails テキスト教材</h2>
 
   <div class = "row">
-    <% @texts.each do |text| %>
+    <% @texts.each do |text, id| %>
       <div class= "col-12 col-md-6 col-lg-4 text-card">
         <%= link_to "/texts/#{text.id}" do %>
           <div class="card card-contens border-dark" >
@@ -10,6 +10,12 @@
             </div>
             <div class="card-body">
               <p class="card-text"><%= text.title %></p>
+              <p id="text-<%= text.id %>">
+              <% if text.read_by?(current_user) %>
+                <%= render "read", text: text.id %>
+              <% else %>
+                <%= render "not_read", text: text.id %>
+              <% end %>
               <p>【<%= text.genre %>】</p>
             </div>
           </div>
