クラス名 & moviesコントローラ 修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,7 +90,7 @@ footer a {
   color: #fff !important;
 }
 
-.container {
+.seach {
   display: flex;
   justify-content: center;
   align-items: center;
