--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,5 +1,5 @@
 <h2 class = "text-center">Ruby/Rails テキスト教材</h2>
-  <div class = "serch container">
+  <div class = "seach">
     <%= search_form_for @q do |f| %>
       <div class="d-flex justify-content-center mb-3" style="width: 300px;">
         <%= f.search_field :title_cont, class:"form-control col-xs-4", placeholder:"教材を探す" %>
